--- a/src/app/components/backDrop/backDrop.html
+++ b/src/app/components/backDrop/backDrop.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<!-- backDrop component -->
+
+<app-header></app-header>
+<div class="sbw-backGround">
+  <h1>
+    {{title}}
+  </h1>
+</div>
