--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -1,7 +1,7 @@
 .sbw-header-navigator{
     height: 80px;
     width: 100%;
-    position: absolute;
+    position: relative;
     top: 0;
     background: olive;
 }
