--- a/src/app/components/backDrop/backDrop.html
+++ b/src/app/components/backDrop/backDrop.html
@@ -1,8 +1,9 @@
 <!-- backDrop component -->
 
-<app-header></app-header>
+<app-header>
+</app-header>
 <div class="sbw-backGround">
-  <h1>
+  <app-navBar>
     {{title}}
-  </h1>
+  </app-navBar>
 </div>
