--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,5 +1,12 @@
 <!-- header component -->
 
 <nav class="sbw-header-navigator">
-    <h1>{{textTest}}</h1>
+    <div class="wrapper">
+        <div class="leftWrapper">
+            <i class="fa fa-ravelry" aria-hidden="true">{{textTest}}</i>
+        </div>
+        <div class="rightWrapper">
+            <i class="fa fa-user-circle" aria-hidden="true"></i>
+        </div>
+    </div>
 </nav>
