--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -3,5 +3,21 @@
     width: 100%;
     position: relative;
     top: 0;
-    background: olive;
+    background: #42a5f5;
+    color: #fff;
+    font-size: 30px;
+}
+.leftWrapper{
+    width:50%;
+    float: left;
+    margin-top: 17px;
+}
+.rightWrapper{
+    width:50%;
+    float: right;
+    text-align: right;
+    margin-top: 17px;
+}
+.wrapper{
+    width: 100%;
 }
