--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -3,7 +3,8 @@
 <nav class="sbw-header-navigator">
     <div class="wrapper">
         <div class="leftWrapper">
-            <i class="fa fa-ravelry" aria-hidden="true">{{textTest}}</i>
+            <i class="fa fa-ravelry" aria-hidden="true"></i>
+            {{appTitle}}
         </div>
         <div class="rightWrapper">
             <i class="fa fa-user-circle" aria-hidden="true"></i>
