--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: patCool;
+    src: url('assets/fonts/Pat-PaCool.woff') format('woff');
+}
