--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -7,7 +7,7 @@
             {{appTitle}}
         </div>
         <div class="rightWrapper">
-            <i class="fa fa-user-circle" aria-hidden="true"></i>
+            <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
     </div>
 </nav>
