--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,7 @@
     font-family: patCool;
     src: url('assets/fonts/Pat-PaCool.woff') format('woff');
 }
+@font-face {
+    font-family: roboBlack;
+    src: url('assets/fonts/Roboto-Black.ttf') format('ttf');
+}
