--- a/src/app/components/sideNavBar/sideNavbar.html
+++ b/src/app/components/sideNavBar/sideNavbar.html
@@ -9,32 +9,32 @@
     <div class="sbw-user-action">
         <ul class="sbw-user-menu">
             <li class="sbw-user-action-list">
-                <a class="sbw-user-action-desc" href="#/sbw-student/dashboard">
+                <a class="sbw-user-action-desc" routerLink="/sbw-student/dashboard">
                     <i class="fa fa-bar-chart-o"></i>&nbsp;<span>Dashboard</span>
                 </a>
             </li>
             <li class="sbw-user-action-list">
-                <a class="sbw-user-action-desc" href="#/sbw-student/courses">
+                <a class="sbw-user-action-desc" routerLink="/sbw-student/courses">
                     <i class="fa fa-mortar-board"></i>&nbsp;<span>Courses</span>
                 </a>
             </li>
             <li class="sbw-user-action-list">
-                <a class="sbw-user-action-desc" href="#/sbw-student/explore">
+                <a class="sbw-user-action-desc" routerLink="/sbw-student/explore">
                     <i class="fa fa-file-text-o"></i>&nbsp;<span>Explore</span>
                 </a>
             </li>
             <li class="sbw-user-action-list">
-                <a class="sbw-user-action-desc" href="#/sbw-student/account">
+                <a class="sbw-user-action-desc" routerLink="/sbw-student/account">
                     <i class="fa fa-user"></i>&nbsp;<span>Account</span>
                 </a>
             </li>
             <li class="sbw-user-action-list">
-                <a class="sbw-user-action-desc" href="#/sbw-student/messages">
+                <a class="sbw-user-action-desc" routerLink="/sbw-student/messages">
                     <i class="fa fa-comments"></i>&nbsp;<span>Messages</span>
                 </a>
             </li>
             <li class="sbw-user-action-list">
-                <a class="sbw-user-action-desc" href="#/sbw-student/logout">
+                <a class="sbw-user-action-desc" routerLink="/sbw-student/logout">
                     <i class="fa fa-sign-out"></i>&nbsp;<span>Logout</span>
                 </a>
             </li>
