--- a/src/app/components/sideNavBar/sideNavbar.html
+++ b/src/app/components/sideNavBar/sideNavbar.html
@@ -20,17 +20,17 @@
             </li>
             <li class="sbw-user-action-list">
                 <a class="sbw-user-action-desc" routerLink="/sbw-student/explore">
-                    <i class="fa fa-file-text-o"></i>&nbsp;<span>Explore</span>
+                    <i class="fa fa-tasks"></i>&nbsp;<span>Tasks</span>
                 </a>
             </li>
             <li class="sbw-user-action-list">
                 <a class="sbw-user-action-desc" routerLink="/sbw-student/account">
-                    <i class="fa fa-user"></i>&nbsp;<span>Account</span>
+                    <i class="fa fa-money"></i>&nbsp;<span>Finances</span>
                 </a>
             </li>
             <li class="sbw-user-action-list">
                 <a class="sbw-user-action-desc" routerLink="/sbw-student/messages">
-                    <i class="fa fa-comments"></i>&nbsp;<span>Messages</span>
+                    <i class="fa fa-calendar"></i>&nbsp;<span>Calendar</span>
                 </a>
             </li>
             <li class="sbw-user-action-list">
