--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -1,11 +1,11 @@
 .sbw-header-navigator{
-    height: 100px;
+    height: 60px;
     width: 100%;
     position: relative;
     top: 0;
-    background: #42a5f5;
+    background: #091823;
     color: #fff;
-    font-size: 4em;
+    font-size: 2.5em;
     font-weight: bold;
     .wrapper{
         width: 100%;
@@ -19,6 +19,11 @@
             text-align: right;
             height: 99px;
             background-color: #fff;
+        }
+        .navbar-brand{
+          padding-left: 0px;
+          float: none;
+          color:white;
         }
     }
 }
