--- a/src/app/components/sideNavBar/sideNavBar.scss
+++ b/src/app/components/sideNavBar/sideNavBar.scss
@@ -1,6 +1,6 @@
 .sbw-side-navbar{
     height: calc(100vh - 100px);
-    background: #212121;
+  background: #eee;
     .sbw-user-block{
         text-align: center;
         display: block;
@@ -8,12 +8,12 @@
         border-color: #2e2e2e;
         border-bottom: 1px solid;
         .sbw-user-img{
-            border-radius: 50%; 
+            border-radius: 50%;
             width: 10em !important;
             height: 10em !important;
         }
         .sbw-user-name{
-            color: #fff;
+            color: #337ab7;
             font-size: 2.5em;
             font-weight: 400;
             line-height: 3.07rem;
@@ -30,20 +30,25 @@
                 position: relative;
                 overflow: hidden;
                 display: flex;
+                cursor: pointer;
                 .sbw-user-action-desc{
                     line-height: 55px;
-                    padding-left: 16px;
-                    font-size: 25px;
+                    font-size: 16px;
+                    padding:0px 10px;
                     display: block;
                     font-weight: 500;
                     text-decoration: none;
-                    color: #fff;
-                    margin-left: 5em;
+                    color: #333;
+                    cursor: pointer;
+                    text-transform: uppercase;
                 }
             }
             .sbw-user-action-list:hover{
-                background-color: #141414;
+                background-color: #fff;
             }
+           .sbw-user-action-list:active{
+               background-color: #81c04d;
+          }
         }
     }
 }
