--- a/src/app/components/sideNavBar/sideNavbar.html
+++ b/src/app/components/sideNavBar/sideNavbar.html
@@ -1,5 +1,5 @@
 <!-- header component -->
-<div class="sbw-side-navbar">
+<div id="navBar" class="sbw-side-navbar">
     <div class="sbw-user-block">
         <a href="#">
             <img src={{userProfileImg}} class="sbw-user-img"/>
@@ -9,7 +9,7 @@
     <div class="sbw-user-action">
         <ul class="sbw-user-menu">
             <li class="sbw-user-action-list">
-                <a class="sbw-user-action-desc" routerLink="/sbw-student/dashboard">
+                <a class="sbw-user-action-desc" routerLinkActive="router-link-active" routerLink="sbw-student/dashboard">
                     <i class="fa fa-bar-chart-o"></i>&nbsp;<span>Dashboard</span>
                 </a>
             </li>
