restructure, connon used modules to core and routing common file

--- a/src/app/components/core/sideNavBar/sideNavBar.html
+++ b/src/app/components/core/sideNavBar/sideNavBar.html
@@ -9,7 +9,7 @@
     <div class="sbw-user-action">
         <ul class="sbw-user-menu">
             <li class="sbw-user-action-list">
-                <a class="sbw-user-action-desc" routerLinkActive="router-link-active" routerLink="sbw-student/dashboard">
+                <a class="sbw-user-action-desc"  routerLink="/sbw-student/dashboard">
                     <i class="fa fa-bar-chart-o"></i>&nbsp;<span>Dashboard</span>
                 </a>
             </li>
