--- a/src/app/components/backDrop/backDrop.html
+++ b/src/app/components/backDrop/backDrop.html
@@ -3,9 +3,9 @@
 <app-header></app-header>
 <div class="sbw-backGround">
   <div class="sbw-nav-wrapper">
-    <app-navBar>
+    <app-navbar>
         {{title}}
-    </app-navBar>
+    </app-navbar>
   </div>
   <div class="sbw-ui-route-wrapper">
     <router-outlet></router-outlet>
