Changed Project Structure

--- a/src/app/core/back-drop/backDrop.html
+++ b/src/app/core/back-drop/backDrop.html
@@ -1,12 +1,12 @@
-<!-- backDrop component -->
+
 
 <app-header></app-header>
 <div class="sbw-backGround">
-  <div class="sbw-nav-wrapper">
-    <app-navbar>
+<!--  <div class="sbw-nav-wrapper">
+    <app-nav-bar>
         {{title}}
-    </app-navbar>
-  </div>
+    </app-nav-bar>
+  </div>-->
   <div class="sbw-ui-route-wrapper">
     <router-outlet></router-outlet>
   </div>
