Creating a new branch

--- a/src/app/core/signin/signin.html
+++ b/src/app/core/signin/signin.html
@@ -1,6 +1,6 @@
 <!-- header component -->
 
-<nav class="sbw-header-navigator">
+<!--<nav class="sbw-header-navigator">
   <div class="wrapper">
     <div class="leftWrapper">
       <i class="fa fa-ravelry" aria-hidden="true"></i>
@@ -23,4 +23,7 @@
       </ul>
     </div>
   </div>
-</nav>
+</nav>-->
+
+
+
