--- a/src/app/core/back-drop/back-drop.html
+++ b/src/app/core/back-drop/back-drop.html
@@ -7,7 +7,7 @@
         {{title}}
     </app-nav-bar>
   </div>-->
-  <div class="sbw-ui-route-wrapper">
+  <div  [ngClass]="{'sbw-signup-container':signUpView,'sbw-ui-route-wrapper':!signUpView}">
     <router-outlet></router-outlet>
   </div>
 </div>
