--- a/src/app/core/back-drop/back-drop.scss
+++ b/src/app/core/back-drop/back-drop.scss
@@ -1,3 +1,5 @@
+@import "../../../assets/styles/_common.scss";
+
 .sbw-backGround{
     background: #f5f5f5;
     position: relative;
@@ -11,5 +13,15 @@
     .sbw-ui-route-wrapper{
         float: right;
         width: 84%;
+    }
+   .sbw-signup-container{
+       width: 100%;
+       height: auto;
+       z-index: 2;
+       position: absolute;
+       background-image: url("../../../assets/images/signIn.jpg");
+       background-size: 100% auto;
+       top:0;
+       bottom:0;
     }
 }
