user deatils entering

--- a/src/app/core/signin/signin.html
+++ b/src/app/core/signin/signin.html
@@ -2,14 +2,14 @@
   <div class="signup-content">
     <form>
       <div class="row">
-      <div class="col-md-6">
-      <input class="form-control signup-form-control" placeholder="Email">
+        <div class="col-md-6">
+          <input class="form-control signup-form-control" [(ngModel)]="editUser.userId" [ngModelOptions]="{standalone: true}" placeholder="Email">
+        </div>
+        <div class="col-md-6">
+          <input class="form-control signup-form-control" [(ngModel)]="editUser.passCode" [ngModelOptions]="{standalone: true}" placeholder="Password">
+        </div>
       </div>
-      <div class="col-md-6">
-      <input class="form-control signup-form-control" placeholder="Password">
-      </div>
-      </div>
-      <div class="row" [:flyInOut]="'in'" ng-if="section">
+      <div class="row" ng-if="section">
         <div class="col-md-6">
           <input class="form-control signup-form-control" placeholder="First Name">
         </div>
@@ -19,9 +19,8 @@
       </div>
       <div class="row mt30">
         <div class="col-md-12">
-      <button type="button" class="btn btn-default btn-block sign-up-button">SIGN UP FOR FREE</button>
-      <button type="button" class="btn btn-default" (click)="updateState()" [@heroState]="state">Click Me!</button>
-      </div>
+         <button type="button" (click)="getIn()" class="btn btn-default btn-block sign-up-button">SIGN UP FOR FREE</button>
+        </div>
       </div>
     </form>
   </div>
@@ -29,13 +28,14 @@
 
 
 
-<ul>
+<!--<ul>
   <li *ngFor="let user of users">
     {{user.passCode}}
   </li>
 
 </ul>
-
+[:flyInOut]="'in'" 
+<button type="button" class="btn btn-default" (click)="updateState()" [@heroState]="state">Click Me!</button>
 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
   <label class="mdl-textfield__label" for="nametext">User Id</label>
   <input type="text" id="nametext" class="mdl-textfield__input" [(ngModel)]="editUser.userId" />
@@ -46,6 +46,6 @@
 </div>
 
  <button class="dashboard-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect
-      mdl-button--accent" (click)="getIn()">Sign In</button>
+      mdl-button--accent" (click)="getIn()">Sign In</button>-->
 
 <!--[(ngModel)]="editCharacter.name"-->
