--- a/src/app/core/signin/signin.scss
+++ b/src/app/core/signin/signin.scss
@@ -10,9 +10,12 @@
     margin: 0 auto;
     background-color: white;
     height: 100%;
-    padding: 5%;
+    padding: 2%;
     .signup-form-control{
       height: 45px;
+    }
+    .row {
+        margin-top: 10px;
     }
     .sign-up-button{
       color:#fff;
